--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -7,45 +7,47 @@
     android:orientation="vertical"
     tools:context=".ClientActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="40dp"
-        android:orientation="vertical">
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginLeft="30dp"-->
+    <!--        android:layout_marginTop="40dp"-->
+    <!--        android:orientation="vertical">-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="19sp"
-            android:textColor="@color/black"
-            android:text="Status : "></TextView>
+    <!--        <TextView-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:textSize="19sp"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:text="Status : "></TextView>-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="22sp"
-            android:text="Disconnected"></TextView>
-    </LinearLayout>
+    <!--        <TextView-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textSize="22sp"-->
+    <!--            android:text="Disconnected"></TextView>-->
+    <!--    </LinearLayout>-->
 
     <Button
+        android:id="@+id/showPairedDevices"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:text="Show Paired Devices"/>
+        android:text="Show Paired Devices" />
 
     <ListView
+        android:id="@+id/deviceListView"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"/>
+        android:layout_height="200dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="3"
         android:layout_marginTop="30dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="3">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -53,50 +55,82 @@
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
+
             <TextView
+                android:id="@+id/deviceA"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Device A">
-            </TextView>
+                android:text="Device A"
+                android:textColor="@color/black"
+                android:textSize="21sp"></TextView>
+
             <TextView
+                android:id="@+id/deviceAStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Counter">
-            </TextView>
+                android:text="Status"
+                android:layout_marginTop="5dp"></TextView>
+
+            <TextView
+                android:id="@+id/deviceACounter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Counter"></TextView>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Device B">
-            </TextView>
+                android:text="Device B"
+                android:textColor="@color/black"
+                android:textSize="21sp"></TextView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Counter">
-            </TextView>
+                android:layout_marginTop="5dp"
+                android:text="Status"></TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Counter"></TextView>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Device C">
-            </TextView>
+                android:text="Device C"
+                android:textColor="@color/black"
+                android:textSize="21sp"></TextView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Counter">
-            </TextView>
+                android:layout_marginTop="5dp"
+                android:text="Status"></TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Counter"></TextView>
         </LinearLayout>
 
     </LinearLayout>
