--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -94,12 +94,14 @@
                 android:textSize="21sp"></TextView>
 
             <TextView
+                android:id="@+id/deviceBStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="Status"></TextView>
 
             <TextView
+                android:id="@+id/deviceBCounter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -121,12 +123,14 @@
                 android:textSize="21sp"></TextView>
 
             <TextView
+                android:id="@+id/deviceCStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="Status"></TextView>
 
             <TextView
+                android:id="@+id/deviceCCounter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
