--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,5 +78,22 @@
             android:text="Counter"
             android:layout_marginTop="30dp"
             android:textSize="30sp"></TextView>
+
+        <TextView
+            android:id="@+id/counterTVB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Counter"
+            android:layout_marginTop="30dp"
+            android:textSize="30sp"></TextView>
+
+
+        <TextView
+            android:id="@+id/counterTVC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Counter"
+            android:layout_marginTop="30dp"
+            android:textSize="30sp"></TextView>
     </LinearLayout>
 </LinearLayout>
